--- a/SquaresNStuff/Base.lproj/Main.storyboard
+++ b/SquaresNStuff/Base.lproj/Main.storyboard
@@ -1,8 +1,14 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,12 +23,49 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SpaceShip" translatesAutoresizingMaskIntoConstraints="NO" id="g5P-n2-7fI">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="167"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AlbertEinstein" translatesAutoresizingMaskIntoConstraints="NO" id="YTW-dR-WHV">
+                                <rect key="frame" x="129" y="125.5" width="117" height="117"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="YTW-dR-WHV" secondAttribute="height" multiplier="1:1" id="Rr2-k6-ljc"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Albert Einstein" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vK1-Rh-s8q">
+                                <rect key="frame" x="155" y="291" width="53" height="21"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <size key="shadowOffset" width="2" height="1"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="YTW-dR-WHV" firstAttribute="height" secondItem="g5P-n2-7fI" secondAttribute="height" multiplier="0.7" id="4wJ-8b-jy5"/>
+                            <constraint firstItem="YTW-dR-WHV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="J8E-hK-gTW"/>
+                            <constraint firstItem="vK1-Rh-s8q" firstAttribute="top" secondItem="YTW-dR-WHV" secondAttribute="bottom" constant="8" id="QJM-92-yTZ"/>
+                            <constraint firstItem="g5P-n2-7fI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Uu3-Ur-hXE"/>
+                            <constraint firstItem="YTW-dR-WHV" firstAttribute="top" secondItem="g5P-n2-7fI" secondAttribute="bottom" multiplier="0.75" id="YgV-2t-vON"/>
+                            <constraint firstItem="g5P-n2-7fI" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="hFQ-ME-tny"/>
+                            <constraint firstItem="g5P-n2-7fI" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="iHz-oK-Eu9"/>
+                            <constraint firstItem="vK1-Rh-s8q" firstAttribute="centerX" secondItem="YTW-dR-WHV" secondAttribute="centerX" id="xBp-rM-FwC"/>
+                            <constraint firstItem="g5P-n2-7fI" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.25" id="ypB-a1-akG"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="profileImageView" destination="YTW-dR-WHV" id="5lC-9B-wTO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="399.19999999999999" y="388.15592203898052"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AlbertEinstein" width="300" height="320"/>
+        <image name="SpaceShip" width="900" height="563"/>
+    </resources>
 </document>
